GNOME Bugzilla – Bug 765538
codec-utils: Don't put level=0 into the caps
Last modified: 2016-04-26 08:06:54 UTC
There is no such thing.
Created attachment 326688 [details] [review] codec-utils: H264 level idc 0 is not valid Don't put level=0 into the caps, it confuses other elements.
Created attachment 326689 [details] [review] codec-utils: H265 level idc 0 is not valid Don't put level=0 into the caps, it confuses other elements.
Created attachment 326690 [details] [review] h264parse: H264 level idc 0 is not valid Don't put level=0 into the caps, it confuses other elements.
Created attachment 326691 [details] [review] h265parse: H265 level idc 0 is not valid Don't put level=0 into the caps, it confuses other elements.
Attachment 326688 [details] pushed as 7741e56 - codec-utils: H264 level idc 0 is not valid Attachment 326689 [details] pushed as 1552220 - codec-utils: H265 level idc 0 is not valid
Attachment 326690 [details] pushed as 4bdda1d - h264parse: H264 level idc 0 is not valid Attachment 326691 [details] pushed as 920ad27 - h265parse: H265 level idc 0 is not valid